--- a/lib/apps/firewiki/views/layouts/layout.handlebars
+++ b/lib/apps/firewiki/views/layouts/layout.handlebars
@@ -63,7 +63,7 @@
     <div class="container p40">
         <div class="row">
             <div class="col-md-6">
-                <p>&copy;&nbsp;FireWiki 2016</p>
+                <p>&copy;&nbsp;FireWiki 2016 - <a href="http://www.adamjohnstone.co" target="_blank">adamjohnstone.co</a></p>
             </div>
             <div class="col-md-6 text-right">
                 <a href="/wiki/home">Back to Home</a>
